Overlay CSS map-wvw ids

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 			<div class="mapCoordinates">
 				<input id="mapCoordinatesMouse" type="text" />
 				<input id="mapCoordinatesCopy" type="text" />
-				<input id="mapCoordinatesName" type="text" />
+				<input id="mapCoordinatesName" class="mapCoordinatesName" type="text" />
 			</div>
 			<div class="mapPeripheral mapPeripheralNorth">
 				<div id="mapQuickURL">
@@ -228,7 +228,7 @@
 			<div class="mapCoordinates">
 				<input id="wvwCoordinatesMouse" type="text" />
 				<input id="wvwCoordinatesCopy" type="text" />
-				<input id="wvwCoordinatesName" type="text" />
+				<input id="wvwCoordinatesName" class="mapCoordinatesName" type="text" />
 			</div>
 			<div class="mapPeripheral mapPeripheralNorth">
 				<div id="wvwSwitch" class="mapHUDContainer">
