--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 					<img id="mapSwitchButton" class="mapHUDButton" title="<dfn> Click to WVW </dfn>" src="img/ui/pages/wvw.png" alt="display" />
 					<div class="mapHUDPopup cntComposition">
 						<label title="Automatically switch the map to Tyria if you are in it."><img data-src="img/ui/pages/map.png" /><input id="opt_bol_switchMap" type="checkbox" />Auto-Switch Tyria Map</label>
-						<label title="Set initial Tyria map zoom level."><img data-src="img/map/zoom.png" /><input id="opt_int_setInitialZoom" class="optSlider" type="range" min="0" max="7" step="1" /></label>
+						<label title="Set initial zoom level for Tyria map."><img data-src="img/map/zoom.png" /><input id="opt_int_setInitialZoom" class="optSlider" type="range" min="0" max="7" step="1" /></label>
 					</div>
 				</div>-->
 				<div class="mapGPS mapHUDContainer">
@@ -240,7 +240,7 @@
 					<img id="wvwSwitchButton" class="mapHUDButton" title="<dfn> Click to Map </dfn>" src="img/ui/pages/map.png" alt="display" />
 					<div class="mapHUDPopup cntComposition">
 						<label title="Automatically switch the map to the Mists if you are in it."><img data-src="img/ui/pages/wvw.png" /><input id="opt_bol_switchMapWvW" type="checkbox" />Auto-Switch Mists Map</label>
-						<label title="Set initial WvW map zoom level."><img data-src="img/map/zoom.png" /><input id="opt_int_setInitialZoomWvW" class="optSlider" type="range" min="0" max="6" step="1" /></label>
+						<label title="Set initial zoom level for WvW map."><img data-src="img/map/zoom.png" /><input id="opt_int_setInitialZoomWvW" class="optSlider" type="range" min="0" max="6" step="1" /></label>
 					</div>
 				</div>
 				<div class="mapGPS mapHUDContainer">
