--- a/mapsrc.html
+++ b/mapsrc.html
@@ -164,7 +164,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 	<p><b>Coordinates credit goes to:</b><br />
 	<a href="http://dulfy.net/category/gw2/">Dulfy</a>: Dive Master, Cleaning Up the Neighborhood, Marriner Plaque, Coins<br />
 	<a href="http://www.mattsta.ninja/">Mattsta</a>: Buried Chests, Coins<br />
-	<a href="http://www.palingenesis.webspace.virginmedia.com/Tim/GW2/Manual/Manual.html">Palingenesis</a>: Badges, Bandit Chests, Speedy Reader, Matrix Cube Key
+	<a href="http://www.palingenesis.webspace.virginmedia.com/Tim/GW2/Manual/Manual.html">Palingenesis</a>: Totems, Seals, Tablets, Masks, Badges, Bandit Chests, Speedy Reader, Matrix Cube Key
 	</p>
 </div>
 <div class="cssRight"><strong>Links:</strong> [Y]outube [W]iki [C]redit</div>
