--- a/index.html
+++ b/index.html
@@ -64,26 +64,33 @@
 			<div id="mapContext" class="itemContext">
 				<ul>
 					<li id="mapContextCenter">Center map</li>
-					<li id="mapContextToggleLock">Toggle map lock</li>
-					<li id="mapContextToggleCompletion">Toggle world completion</li>
-					<li id="mapContextDrawCompletion">Draw completion route</li>
+					<li id="mapContextToggleHUD">Toggle HUD</li>
 					<li id="mapContextClearPins">Clear pins</li>
+					<li class="itemContextSubmenu"><span>More</span>
+						<ul>
+							<li id="mapContextToggleLock">Toggle map lock</li>
+							<li id="mapContextToggleCompletion">Toggle world completion</li>
+							<li id="mapContextDrawCompletion">Draw completion route</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 			<article id="mapHUDPane">
-			<div id="itemDashboard">
-				<kbd id="dsbClose" class="curClick" title="Close the dashboard. You can hide this permanently by going to Options page, Map section."></kbd>
-				<div id="dsbAnnouncement"></div>
-				<div id="dsbCountdown"></div>
-				<div id="dsbSale"></div>
-				<div id="dsbSupply"></div>
-				<div id="dsbStory" class="jsScrollable"></div>
-			</div>
-			<div id="itemTimeline">
-				<kbd id="tmlDelete" class="curClick" title="Permanently hide the timeline. You can restore this by going to Options page, Map section."></kbd>
-				<kbd id="tmlClose" class="curClick" title="Close the timeline. You can hide this permanently by going to Options page, Map section."></kbd>
-				<kbd id="tmlToggle" class="curClick" title="Toggle timeline opacity."></kbd>
-				<div id="tmlIndicator"></div>
+			<div id="mapHUDBoxes">
+				<div id="itemDashboard">
+					<kbd id="dsbClose" class="curClick" title="<dfn>Close the dashboard.</dfn> To hide permanently, go to Options page, Map section.<br /> To toggle, right click on the map and choose &quot;Toggle HUD&quot;."></kbd>
+					<div id="dsbAnnouncement"></div>
+					<div id="dsbCountdown"></div>
+					<div id="dsbSale"></div>
+					<div id="dsbSupply"></div>
+					<div id="dsbStory" class="jsScrollable"></div>
+				</div>
+				<div id="itemTimeline">
+					<kbd id="tmlDelete" class="curClick" title="<dfn>Permanently hide the timeline.</dfn> To restore, go to Options page, Map section."></kbd>
+					<kbd id="tmlClose" class="curClick" title="<dfn>Close the timeline.</dfn> To hide permanently, go to Options page, Map section.<br /> To toggle, right click on the map and choose &quot;Toggle HUD&quot;."></kbd>
+					<kbd id="tmlToggle" class="curClick" title="Toggle timeline opacity."></kbd>
+					<div id="tmlIndicator"></div>
+				</div>
 			</div>
 			<time id="mapTime" class="mapTime"></time>
 			<div class="mapCoordinates">
@@ -542,7 +549,7 @@
 					<label title="Show/Hide GW2 official event countdowns and gem sales on the top right corner of the map pane. Requires reload."><input id="opt_bol_showDashboard" type="checkbox" /> Show the dashboard</label>
 					<label title="Show/Hide Heart of Thorns meta events timeline."><input id="opt_bol_showTimeline" type="checkbox" /> Show the timeline</label>
 					<label title="Enable high visibility timeline."><input id="opt_bol_showTimelineOpaque" type="checkbox" /> Opaque timeline</label>
-					<span>For map options, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Icon" /> button on the top right corner of the map pane.</span><br />
+					<span>For map options, hover over the <img class="cntIconExample" src="img/map/display.png" alt="Icon" /> button on the top right corner of the map pane. To toggle the Dashboard and Timeline, right click on the map and choose &quot;Toggle HUD&quot;</span><br />
 					<br />
 					<h2>Alarm</h2>
 					<span>Voice announcement requires Chrome, Firefox, or IE11+. Hover over the speaker icon on the chains page to change alarm.</span>
