--- a/mapsrc.html
+++ b/mapsrc.html
@@ -43,7 +43,6 @@
 	<dt>WvW Big Spender<dt><dd>Go to the Armor/Weapon Master NPC at the citadel of your borderland and buy the skins (not the armor). Alternatively, replenish your deployable traps.</dd>
 	<dt>PvP Dailies<dt><dd>Open the PvP window and click on the Game Browser tab. Look for rooms that say &quot;dailies&quot;; they are specifically for completing dailies and you do not have to fight. You can complete the &quot;Reward&quot; and &quot;Rank&quot; dailies instantly by consuming the potion received from daily rewards. For &quot;Defender&quot;, you need to get a kill while the capture point is fully captured by your color.</dd>
 </dl>
-<br />
 </div>
 
 <div id="dlyContainer">
@@ -166,7 +165,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 	<p>Every type of collectible is its own checklist. The map markers can be clicked three times to alternate between three ring colors representing an <em>Unfound</em>, <em>Tracked</em>, and <em>Found</em> state, and your address bar will be updated with a shareable URL for those marked. Click Reset for all the rings of that collectible type to be Unfounded again.</p>
 
 	<p><b>Coordinates credit goes to:</b><br />
-	<a href="http://dulfy.net/category/gw2/">Dulfy</a>: Dive Master, Cleaning Up the Neighborhood, Marriner Plaque, Coins<br />
+	<a href="http://dulfy.net/category/gw2/">Dulfy</a>: Mastery Insight, Strongbox, Dive Master, Cleaning Up the Neighborhood, Marriner Plaque, Coins<br />
 	<a href="http://www.mattsta.ninja/">Mattsta</a>: Buried Chests, Coins<br />
 	<a href="http://www.palingenesis.webspace.virginmedia.com/Tim/GW2/Manual/Manual.html">Palingenesis</a>: Totems, Seals, Tablets, Masks, Badges, Bandit Chests, Speedy Reader, Matrix Cube Key
 	</p>
