--- a/mapsrc.html
+++ b/mapsrc.html
@@ -69,8 +69,12 @@
 </header>
 <section>
 <button id="mapToggle_Resource" class="curToggle" title="Toggle display of all nodes."><img data-src="img/map/display.png" alt="Toggle" /></button>
-<div class="cntOptionMini" style="margin:8px"><label><input id="nodShowRegular" type="checkbox" /> Show possible nodes</label></div>
-<button id="nodUncheck" class="btnUncheck cssRight" style="margin-right:32px;" title="Reset map nodes that you have clicked on."><img data-src="img/ui/uncheck.png" /></button><br />
+<button id="nodRoute" class="curZoom" style="" title="Draw route for any visible nodes.">
+	<img data-src="img/map/compass.png" />
+</button>
+<div class="cntOptionMini" style="margin:8px"><label><input id="nodShowPossible" type="checkbox" /> Show possible nodes</label></div>
+<button id="nodUncheck" class="btnUncheck" title="Reset map nodes that you have clicked on."><img data-src="img/ui/uncheck.png" /></button>
+<br />
 <div class="cntDivider" style="margin: 4px 0px 8px 0px;"></div>
 <div class="nodList">
 	<div id="nodResource_Metal"><button id="nodToggle_ResourceMetal" class="curToggle"><img data-src="img/node/resource_metal.png" alt="Toggle" /></button></div>
@@ -80,13 +84,13 @@
 <button id="nodRefresh" class="trdButton cssRight" title="Refresh Trading Post prices."><img data-src="img/ui/refresh.png" alt="Refresh" /></button>
 <p><span class="nodRich"><img data-src="img/node/lettuce.png" /></span> &nbsp; <strong>Rich</strong> vein or plant farms, permanent location</p>
 <p><span class="nodRegular"><img data-src="img/node/orichalcum.png" /></span> &nbsp; <strong>Regular</strong> node, possible location</p>
-<p><span class="nodZone"><img data-src="img/node/soft.png" /></span> &nbsp; <strong>Zone</strong> has that resource (not a node)</p>
+<p><span class="nodHotspot"><img data-src="img/node/soft.png" /></span> &nbsp; <strong>Hotspot</strong> area, probable locations</p>
 <p>Click a node on the map to hide/unhide it; right click it to zoom in/out. Prices are lowest sell posting after tax. Please <a href="http://forum.renaka.com/topic/5565814/">report</a> bad or missing nodes.</p>
 <kbd class="jsHelpCollapsible"></kbd>
 <div>
 	<p>Rich and T6 nodes reset in about 22 hours after gathering; T1-T5 nodes reset in about 1 hour. You can use alts to re-gather any node. More <a href="http://wiki.guildwars2.com/wiki/Resource#Harvesting">plants</a> on the wiki.</p>
 	<p>Notice: The map nodes you clicked to hide will be disordered when the site updates the nodes database.</p>
-	<p><b>Credits:</b> GW2 Wiki (plant farms), jetti91 and Gragx (rich nodes), katubug and Moonlight1001 (hotspots), sarcasticbots (Toxic Spores), ScionKai (Poultry), koenvu (Truffles)</p>
+	<p><b>Credits:</b> GW2 Wiki (plant farms), jetti91 and Gragx (rich nodes), Mikro (wood), katubug and Moonlight1001 (hotspots), sarcasticbots (Toxic Spores), ScionKai (Poultry), koenvu (Truffles)</p>
 </div>
 <br />
 </section>
