--- a/mapsrc.html
+++ b/mapsrc.html
@@ -69,7 +69,7 @@
 </header>
 <section>
 <button id="mapToggle_Resource" class="curToggle" title="Toggle display of all nodes."><img data-src="img/map/display.png" alt="Toggle" /></button>
-<button id="nodRoute" class="curZoom" style="" title="Draw route for any displayed nodes.<br /> Map nodes you have clicked on are excluded.<br />Right click on the map for Pins functions.">
+<button id="nodRoute" class="curZoom" style="" title="Draw route for any displayed nodes.<br /> Map nodes you have clicked on are excluded.<br /><dfn>Right click on the map</dfn> for Pins functions.">
 	<img data-src="img/map/compass.png" />
 </button>
 <div class="cntOptionMini" style="margin:8px"><label><input id="nodShowPossible" type="checkbox" /> Show possible nodes</label></div>
