--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 					<li id="mapContextToggleHUD">Toggle HUD</li>
 					<li class="itemContextSubmenu" id="mapContextPins"><span>Pins</span>
 						<ul>
-							<li id="mapContextChatlinkPins">Chatlink</li>
-							<li id="mapContextOptimizePins">Optimize</li>
-							<li id="mapContextUndoPins">Undo</li>
-							<li id="mapContextClearPins">Clear</li>
 							<li class="itemContextSubmenu"><span>Load</span>
 								<ul id="mapContextLoadPins"></ul>
 							</li>
 							<li class="itemContextSubmenu"><span>Save</span>
 								<ul id="mapContextSavePins"></ul>
 							</li>
+							<li id="mapContextOptimizePins">Optimize</li>
+							<li id="mapContextChatlinkPins">Chatlink</li>
+							<li id="mapContextUndoPins">Undo</li>
+							<li id="mapContextClearPins">Clear</li>
 						</ul>
 					</li>
 					<li class="itemContextSubmenu"><span>Map</span>
@@ -481,6 +481,7 @@
 					<ins class="s16 s16_twitter"></ins>
 				</a>
 			</div>
+			<canvas id="paneClockCanvas" class="clkSizeRegular"></canvas>
 		</section>
 		<!-- Menu, if these IDs were changed, change the <article> tags' too
 		==================================================================== -->
