Sale update, resource icons 256 colors

--- a/index.html
+++ b/index.html
@@ -273,6 +273,12 @@
 			</div>
 			<article id="wvwHUDPane">
 			<div id="wvwExpandButton" class="mapExpandButton mapHUDButton curToggle" title="<dfn> Click to Expand Map </dfn>"></div>
+			<div id="wvwLeaderboard">
+				<div id="lboContainer">
+					<div id="lboCurrent"></div>
+					<div id="lboOther"></div>
+				</div>
+			</div>
 			<time id="wvwTime" class="mapTime"></time>
 			<div class="mapCoordinates">
 				<input id="wvwCoordinatesMouse" type="text" />
