--- a/index.html
+++ b/index.html
@@ -276,8 +276,9 @@
 			<div id="wvwLeaderboard">
 				<div id="lboContainer">
 					<kbd id="lboToggle" class="curToggle btnWindow lboButton" title="<dfn>Toggle Leaderboard</dfn>"></kbd>
-					<kbd id="lboCondense" class="curToggle btnWindow lboButton" title="<dfn>Condense Leaderboard</dfn>"></kbd>
-					<kbd id="lboRegion" class="curToggle btnWindow lboButton" title="<dfn>Toggle All Tiers</dfn>"></kbd>
+					<kbd id="lboCondense" class="curToggle btnWindow lboButton lboExtra" title="<dfn>Condense Leaderboard</dfn>"></kbd>
+					<kbd id="lboRegion" class="curToggle btnWindow lboButton lboExtra" title="<dfn>Toggle All Server Matchups</dfn>"></kbd>
+					<time id="lboCountdown" class="lboExtra"></time>
 					<div id="lboCurrent"></div>
 					<div id="lboOther"></div>
 				</div>
