--- a/mapsrc.html
+++ b/mapsrc.html
@@ -73,7 +73,7 @@
 	<img data-src="img/map/compass.png" />
 </button>
 <div class="cntOptionMini" style="margin:8px"><label><input id="nodShowPossible" type="checkbox" /> Show possible nodes</label></div>
-<button id="nodUncheck" class="btnUncheck" title="Reset map nodes that you have clicked on."><img data-src="img/ui/uncheck.png" /></button>
+<button id="nodUncheck" class="btnUncheck" title="Reset map nodes that you have clicked on."></button>
 <br />
 <div class="cntDivider" style="margin: 4px 0px 8px 0px;"></div>
 <div class="nodList">
@@ -120,7 +120,7 @@
 <label style="margin-right:12px;"><input id="jpzToggleJP" type="checkbox" checked="checked" /> <img class="cntIconExample" data-src="img/map/jp.png" alt="Toggle" /> Show JPs</label>
 <label><input id="jpzToggleChest" type="checkbox" /> <img class="cntIconExample" data-src="img/map/chest.png" alt="Toggle" /> Show chests</label>
 </span>
-<button id="jpzUncheckJP" class="btnUncheck cssRight"><img data-src="img/ui/uncheck.png" /></button>
+<button id="jpzUncheckJP" class="btnUncheck cssRight"></button>
 
 <div class="mapZoneLinks">
 <h2>Easy <span class="mapLegendLine" style="border-bottom: 2px solid lime"></span></h2>
@@ -140,7 +140,7 @@ Mini-Dungeons and Explorer Achievements that have chests: less jump, more fight.
 	<dl id="jpzList_4" class="jpzList"></dl>
 	<br />
 <h2>Chests</h2>
-<button id="jpzUncheckChest" class="btnUncheck cssRight"><img data-src="img/ui/uncheck.png" /></button>
+<button id="jpzUncheckChest" class="btnUncheck cssRight"></button>
 <img class="cntIconExample" data-src="img/map/chest.png" /> &nbsp; <a href="http://wiki.guildwars2.com/wiki/List_of_basic_chests">Basic chests</a> lightly guarded.<br />
 <img class="cntIconExample" data-src="img/map/chest.png" style="box-shadow: 0px 0px 10px gold; border-radius: 16px;" /> &nbsp; <a href="http://wiki.guildwars2.com/wiki/Splendid_Chest">Splendid chests</a> heavily guarded.<br />
 These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hold Ctrl when you're in the area ingame to see the chest name appears. Kill mobs guarding the chest or use stealth/invulnerability to open it.
@@ -352,7 +352,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 		<textarea>Sheet 9</textarea>
 	</div>
 	<br />
-	<button id="chlNotepadRestore" class="btnDefault cssRight" title="Erase all your notes and restore the default text. Make sure you want to!"><img data-src="img/ui/default.png" /></button>
+	<button id="chlNotepadRestore" class="btnDefault cssRight" title="Erase all your notes and restore the default text. Make sure you want to!"></button>
 </div>
 </section>
 
@@ -391,7 +391,7 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 		<span><var id="chlDungeonCalculator_Silver">0</var><img data-src="img/ui/coin_silver.png" alt="Silver" /></span>
 		<span><var id="chlDungeonCalculator_Copper">0</var><img data-src="img/ui/coin_copper.png" alt="Copper" /></span>
 	</div>
-	<button id="chlDungeonUncheck" class="cssRight btnUncheck"><img data-src="img/ui/uncheck.png" /></button>
+	<button id="chlDungeonUncheck" class="cssRight btnUncheck"></button>
 	<div class="chlDungeonBar" data-name="AC">
 		<img class="chlDungeonNight" src="img/ui/day_night.png" alt="Night" /> 
 		<label title="Hodgins"><input data-money="5000" data-mode="E" type="checkbox" />1</label>
@@ -461,14 +461,14 @@ These open world chests are separate from Jumping Puzzles and Mini-Dungeons. Hol
 	<div id="chlCustomDaily">
 		<ol id="chlCustomListDaily" data-samples="Did dailies|Gathered home nodes|Opened JP chests|Crafted timegates|Fed Mawdrey, Star, Princess|Bought Converter items"></ol>
 		<br />
-		<button id="chlCustomRestoreDaily" class="btnDefault cssRight" title="Restore example daily checklist items."><img data-src="img/ui/default.png" /></button>
-		<button id="chlCustomUncheckDaily" class="btnUncheck"><img data-src="img/ui/uncheck.png" /></button>
+		<button id="chlCustomRestoreDaily" class="btnDefault cssRight" title="Restore example daily checklist items."></button>
+		<button id="chlCustomUncheckDaily" class="btnUncheck"></button>
 	</div>
 	<div id="chlCustomWeekly">
 		<ol id="chlCustomListWeekly" data-samples="Did raid|Did guild missions|Farmed personal story key"></ol>
 		<br />
-		<button id="chlCustomRestoreWeekly" class="btnDefault cssRight" title="Restore example weekly checklist items."><img data-src="img/ui/default.png" /></button>
-		<button id="chlCustomUncheckWeekly" class="btnUncheck"><img data-src="img/ui/uncheck.png" /></button>
+		<button id="chlCustomRestoreWeekly" class="btnDefault cssRight" title="Restore example weekly checklist items."></button>
+		<button id="chlCustomUncheckWeekly" class="btnUncheck"></button>
 	</div>
 </div>
 <br />
