EBG destructible walls

--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 					<u><a class="jsTranslate" title="<dfn>Switch to Mobile Mode (right panel only)</dfn><br />gw2timer.com/m<br /><div class='mapLoc'><img src='http://i.imgur.com/0QsaeY7.png' /></div>" href="./?mode=Mobile">mobile</a></u><em> /</em>
 					<u><a class="jsTranslate" title="<dfn>Switch to Tile Mode (timers only)</dfn><br />gw2timer.com/t<br /><div class='mapLoc'><img src='http://i.imgur.com/Q6O2lIx.png' /></div>" href="./?mode=Tile">tile</a></u>
 				</span>
-				<!--<div id="mapSwitch" class="mapHUDContainer">
+				<div id="mapSwitch" class="mapHUDContainer" style="visibility:hidden;">
 					<img id="mapSwitchButton" class="mapHUDButton curToggle" title="<dfn> Click to WVW </dfn>" src="img/ui/pages/wvw.png" alt="display" />
-				</div>-->
+				</div>
 				<div class="mapGPS mapHUDContainer">
 					<img id="mapGPSButton" class="mapHUDButton" title="<dfn> Click to Center Character </dfn>" data-src="img/map/gps.png" alt="GPS" />
 					<div class="mapHUDPopup cntComposition">
